# honeycomb-opentelemetry-python

./: .env  .gitignore  .pylintrc  CHANGELOG.md  DEVELOPING.md  Makefile  README.md  RELEASING.md  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
examples/: README.md
examples/distroless/: Dockerfile  README.md  app.py  pyproject.toml
examples/hello-world/: Dockerfile  README.md  app.py  pyproject.toml
examples/hello-world-django/: README.md  manage.py  pyproject.toml
examples/hello-world-django/hello_world/: asgi.py  settings.py  urls.py  wsgi.py
examples/hello-world-django/pages/: urls.py  views.py
examples/hello-world-flask/: Dockerfile  README  README.md  app.py  pyproject.toml
honeycomb/opentelemetry/: __init__.py  distro.py  local_exporter.py  metrics.py  options.py  resource.py  sampler.py  trace.py  tracing.py  version.py
smoke-tests/: docker-compose.yml  smoke-sdk-grpc-flask.bats  smoke-sdk-grpc.bats  smoke-sdk-http-flask.bats  smoke-sdk-http.bats
smoke-tests/test_helpers/: utilities.bash
src/honeycomb-opentelemetry/: pyproject.toml
src/honeycomb-opentelemetry-components/: README.md  pyproject.toml
src/honeycomb-opentelemetry-components/src/honeycomb/opentelemetry/components/: __init__.py  baggage.py  local_exporter.py  metrics.py  resource.py  sampler.py  trace.py
src/honeycomb-opentelemetry/src/honeycomb/opentelemetry/: distro.py
src/honeycomb/opentelemetry/: baggage.py  distro.py  hello.py  local_exporter.py  metrics.py  options.py  resource.py  sampler.py  trace.py  version.py
tests/: test_baggage.py  test_distro.py  test_hello.py  test_local_exporter.py  test_metrics.py  test_options.py  test_resource.py  test_sampler.py  test_trace.py  utils.py
