[tool.poetry]
name = "honeycomb-opentelemetry"
version = "0.3.0a0"
description = "Honeycomb OpenTelemetry Distro for Python"
authors = ["Honeycomb <support@honeycomb.io>"]
readme = "README.md"
packages = [{include = "honeycomb", from = "src" }]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7, >= 3.7.2"
opentelemetry-api = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-instrumentation = "0.43b0"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.5,<8.0"
pytest = "^7.2.0"
pylint = "^2.16.0"
pycodestyle = "^2.10.0"
importlib-metadata = { version = ">=0.12", python = "<3.8" }
requests-mock = "^1.10.0"

[tool.poetry.plugins."opentelemetry_distro"]
distro = "honeycomb.opentelemetry.distro:HoneycombDistro"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
