[tool.poetry]
name = "distroless"
version = "0.1.0"
description = ""
authors = ["Honeycomb <support@honeycomb.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
honeycomb-opentelemetry-components = {path = "../../src/honeycomb-opentelemetry-components", develop = true}
opentelemetry-api = "1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
