[tool.poetry]
name = "hello-world-flask"
version = "0.1.0"
description = ""
authors = ["Honeycomb <support@honeycomb.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
opentelemetry-instrumentation-flask = "^0.35b0"
honeycomb-opentelemetry = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
