[tool.poetry]
name = "hello-world-flask"
version = "0.1.0"
description = ""
authors = ["Honeycomb <support@honeycomb.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.5"
Werkzeug = "3.0.1"
honeycomb-opentelemetry = {path = "../../", develop = true}
opentelemetry-api = "1.22.0"
opentelemetry-instrumentation-flask = "0.43b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
